part1-openai/envoy-aicore.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8100
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/openai"
                          route:
                            auto_host_rewrite: true
                            cluster: aicore
                            timeout: 300s
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^.*/(deployments/.*)$"
                              substitution: "/v2/inference/\\1"
                          request_headers_to_add:
                            - header:
                                key: "AI-Resource-Group"
                                value: "default"
                              append_action: ADD_IF_ABSENT
                        - match:
                            prefix: "/"
                          route:
                            auto_host_rewrite: true
                            cluster: aicore
                            timeout: 300s
                          request_headers_to_add:
                            - header:
                                key: "AI-Resource-Group"
                                value: "default"
                              append_action: ADD_IF_ABSENT
                http_filters:
                  - name: envoy.filters.http.credential_injector
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.credential_injector.v3.CredentialInjector
                      allow_request_without_credential: true
                      overwrite: true
                      credential:
                        name: envoy.http.injected_credentials.oauth2
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.http.injected_credentials.oauth2.v3.OAuth2
                          token_endpoint:
                            cluster: xsuaa
                            timeout: 600s
                            uri: "<url>/oauth/token"
                          client_credentials:
                            client_id: "<clientid>"
                            client_secret:
                              name: client-secret
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  secrets:
    - name: client-secret
      generic_secret:
        secret:
          inline_string: "<clientsecret>"
  clusters:
    - name: xsuaa
      connect_timeout: 5s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: xsuaa
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: <DOMAIN NAME URL>
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: <DOMAIN NAME URL>
    - name: aicore
      connect_timeout: 5s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: aicore
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: <DOMAIN NAME AI_API_URL>
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: <DOMAIN NAME AI_API_URL>
